[package]
name = "neptune-lbp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neptune_lbp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "=1.17.0"
half = "=2.2.1"
anchor-spl = "0.29.0"
solana-maths = "0.1.2"
solana-safe-math = "0.1.0"
uint = "0.9.5"
num  = "0.4.1"
cargo-crev = "0.25.7"
